src/services/control-panel-microservice/ui/envoy.yaml
static_resources:
  clusters:
  - name: grpc_server
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: grpc_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: "localhost", port_value: 50051 }  # gRPC сервер

  - name: rest_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: rest_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: "localhost", port_value: 8080 }  # REST API сервер

  listeners:
  - name: listener_grpc
    address: { socket_address: { address: "0.0.0.0", port_value: 8080 } }  # API Gateway порт
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: grpc_and_rest
              domains: ["*"]
              routes:
              - match: { prefix: "/v1/grpc" }
                route: { cluster: grpc_server }
              - match: { prefix: "/v1/rest" }
                route: { cluster: rest_api }
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.router
